--- a/QuantumTechnicianApp/Src/EstimateScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/EstimateScreen.fx.yaml
@@ -88,7 +88,7 @@ EstimateScreen As screen:
                 DisplayMode: =DisplayMode.Disabled
                 Fill: =RGBA(0, 0, 0, 0)
                 Font: =Font.Arial
-                Height: =Parent.Height/1.5
+                Height: =Parent.Height/1.8
                 RadiusBottomLeft: =50
                 RadiusBottomRight: =50
                 RadiusTopLeft: =50
@@ -100,7 +100,7 @@ EstimateScreen As screen:
                         User().FullName,
                         Find(" ", User().FullName) + 1,
                         1)
-                Width: =Parent.Height/1.5
+                Width: =Parent.Height/1.8
                 ZIndex: =7
 
         ctnUserHeaderES As groupContainer.manualLayoutContainer:
@@ -433,7 +433,7 @@ EstimateScreen As screen:
                         Font: =Font.Arial
                         Height: =If(VarEstimateHours,48,0)
                         Size: =If(Parent.Width<358,14,Parent.Width>358,14,16)
-                        Text: ="Estimate Hours(Total Man Hours)"
+                        Text: ="Estimate hours(total man hours)"
                         Visible: =VarEstimateHours
                         Width: =Parent.Width - 60
                         X: =30
@@ -447,7 +447,7 @@ EstimateScreen As screen:
                         Font: =Font.Arial
                         Format: =TextFormat.Number
                         Height: =50
-                        HintText: ="Estimate Hours (Total man Hours)"
+                        HintText: ="Estimate hours (total man hours)"
                         HoverBorderColor: =RGBA(202, 202, 202, 1)
                         HoverFill: =RGBA(0, 0, 0, 0)
                         MaxLength: =Parent.MaxLength
@@ -514,7 +514,7 @@ EstimateScreen As screen:
                         Font: =Font.Arial
                         Height: =If(VarNotes,48,0)
                         Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
-                        Text: ="Material , Part number and other things"
+                        Text: ="Material , part number and other things"
                         Visible: =VarNotes
                         Width: =Parent.Width - 60
                         X: =30
@@ -527,7 +527,7 @@ EstimateScreen As screen:
                         DisplayMode: =Parent.DisplayMode
                         Font: =Font.Arial
                         Height: =80
-                        HintText: ="Material,Part Number and Other things"
+                        HintText: ="Material,part number and other things"
                         HoverBorderColor: =RGBA(202, 202, 202, 1)
                         HoverFill: =RGBA(0, 0, 0, 0)
                         MaxLength: =Parent.MaxLength
@@ -629,7 +629,7 @@ EstimateScreen As screen:
                         PressedBorderColor: =
                         PressedColor: =RGBA(0, 0, 0, 1)
                         Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
-                        Text: ="Unit Down"
+                        Text: ="Unit down"
                         Width: =Parent.Width-50
                         X: =30
                         ZIndex: =5
@@ -741,7 +741,7 @@ EstimateScreen As screen:
                         HoverColor: =RGBA(0, 0, 0, 1)
                         PressedBorderColor: =
                         Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
-                        Text: ="Travel Required"
+                        Text: ="Travel required"
                         Width: =Parent.Width-50
                         X: =30
                         ZIndex: =5
@@ -797,7 +797,7 @@ EstimateScreen As screen:
                         HoverColor: =RGBA(0, 0, 0, 1)
                         PressedBorderColor: =
                         Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
-                        Text: ="Communicated to Customer"
+                        Text: ="Communicated to customer"
                         Width: =Parent.Width-50
                         X: =30
                         ZIndex: =5
