--- a/QuantumTechnicianApp/Src/LeadSummaryScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/LeadSummaryScreen.fx.yaml
@@ -85,7 +85,7 @@ LeadSummaryScreen As screen:
                 DisplayMode: =DisplayMode.Disabled
                 Fill: =RGBA(0, 0, 0, 0)
                 Font: =Font.Arial
-                Height: =Parent.Height/1.5
+                Height: =Parent.Height/1.8
                 RadiusBottomLeft: =50
                 RadiusBottomRight: =50
                 RadiusTopLeft: =50
@@ -97,7 +97,7 @@ LeadSummaryScreen As screen:
                         User().FullName,
                         Find(" ", User().FullName) + 1,
                         1)
-                Width: =Parent.Height/1.5
+                Width: =Parent.Height/1.8
                 ZIndex: =11
 
         ctnUserNameLSS As groupContainer.manualLayoutContainer:
@@ -197,7 +197,7 @@ LeadSummaryScreen As screen:
                             Font: =Font.Arial
                             Height: =48
                             Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
-                            Text: ="Contract Number"
+                            Text: ="Contract number"
                             Width: =Parent.Width-60
                             Wrap: =false
                             X: =30
@@ -210,7 +210,7 @@ LeadSummaryScreen As screen:
                                 =//Parent.Default
                                 IntxtContractNumber.Text
                             DelayOutput: =true
-                            DisplayMode: =Parent.DisplayMode
+                            DisplayMode: =DisplayMode.Disabled
                             Font: =Font.Arial
                             Height: =50
                             HoverBorderColor: =RGBA(202, 202, 202, 1)
@@ -278,7 +278,7 @@ LeadSummaryScreen As screen:
                             Font: =Font.Arial
                             Height: =30
                             Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
-                            Text: ="Building Name"
+                            Text: ="Building name"
                             Width: =Parent.Width - 60
                             Wrap: =false
                             X: =30
@@ -289,7 +289,7 @@ LeadSummaryScreen As screen:
                             BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
                             Default: =IntxtBuildingName.Text
                             DelayOutput: =true
-                            DisplayMode: =Parent.DisplayMode
+                            DisplayMode: =DisplayMode.Disabled
                             Font: =Font.Arial
                             Height: =50
                             HoverBorderColor: =RGBA(202, 202, 202, 1)
@@ -357,7 +357,7 @@ LeadSummaryScreen As screen:
                             Color: =RGBA(0, 0, 0, 1)
                             Height: =32
                             Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
-                            Text: =Parent.DisplayName
+                            Text: ="Zipcode"
                             Width: =Parent.Width - 60
                             Wrap: =false
                             X: =30
@@ -368,7 +368,7 @@ LeadSummaryScreen As screen:
                             BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
                             Default: =IntxtZipCode.Text
                             DelayOutput: =true
-                            DisplayMode: =Parent.DisplayMode
+                            DisplayMode: =DisplayMode.Disabled
                             Height: =50
                             HoverBorderColor: =RGBA(202, 202, 202, 1)
                             HoverFill: =RGBA(0, 0, 0, 0)
@@ -446,12 +446,13 @@ LeadSummaryScreen As screen:
                             BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
                             Default: =IntxtAddress.Text
                             DelayOutput: =true
-                            DisplayMode: =Parent.DisplayMode
+                            DisplayMode: =DisplayMode.Disabled
                             Font: =Font.Arial
                             Height: =50
                             HoverBorderColor: =RGBA(202, 202, 202, 1)
                             HoverFill: =RGBA(0, 0, 0, 0)
                             MaxLength: =Parent.MaxLength
+                            Mode: =TextMode.MultiLine
                             PaddingLeft: =5
                             RadiusBottomLeft: =0
                             RadiusBottomRight: =0
@@ -513,7 +514,7 @@ LeadSummaryScreen As screen:
                             Font: =Font.Arial
                             Height: =48
                             Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
-                            Text: ="No of Units"
+                            Text: ="No of units"
                             Width: =Parent.Width - 60
                             Wrap: =false
                             X: =30
@@ -592,7 +593,7 @@ LeadSummaryScreen As screen:
                             Font: =Font.Arial
                             Height: =35
                             Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
-                            Text: ="Unit Description"
+                            Text: ="Unit description"
                             Width: =Parent.Width - 60
                             X: =30
                             Y: =10
@@ -608,6 +609,7 @@ LeadSummaryScreen As screen:
                             HoverBorderColor: =RGBA(202, 202, 202, 1)
                             HoverFill: =RGBA(0, 0, 0, 0)
                             MaxLength: =Parent.MaxLength
+                            Mode: =TextMode.MultiLine
                             PaddingLeft: =5
                             RadiusBottomLeft: =0
                             RadiusBottomRight: =0
@@ -752,7 +754,7 @@ LeadSummaryScreen As screen:
                             Color: =RGBA(0, 0, 0, 1)
                             Font: =Font.Arial
                             Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
-                            Text: ="Scope of Work"
+                            Text: ="Scope of work"
                             Width: =Parent.Width - 60
                             Wrap: =false
                             X: =30
@@ -835,7 +837,7 @@ LeadSummaryScreen As screen:
                             Color: =RGBA(0, 0, 0, 1)
                             Font: =Font.Arial
                             Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
-                            Text: ="Scope of Work (Manually Entered)"
+                            Text: ="Scope of work (manually entered)"
                             Width: =Parent.Width - 60
                             X: =30
                             Y: =10
@@ -913,7 +915,7 @@ LeadSummaryScreen As screen:
                             Font: =Font.Arial
                             Height: =48
                             Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
-                            Text: ="Estimated Hours (Total Man Hours)"
+                            Text: ="Estimated hours (total man hours)"
                             Width: =Parent.Width - 60
                             X: =30
                             Y: =10
@@ -990,7 +992,7 @@ LeadSummaryScreen As screen:
                             Color: =RGBA(0, 0, 0, 1)
                             Height: =48
                             Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
-                            Text: ="Material, Part Number and other things"
+                            Text: ="Material, part number and other things"
                             Width: =Parent.Width - 60
                             X: =30
                             Y: =10
@@ -1098,7 +1100,7 @@ LeadSummaryScreen As screen:
                             HoverColor: =RGBA(0, 0, 0, 1)
                             PressedBorderColor: =
                             Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
-                            Text: ="Unit Down"
+                            Text: ="Unit down"
                             Width: =Parent.Width-60
                             X: =40
                             ZIndex: =5
@@ -1157,7 +1159,7 @@ LeadSummaryScreen As screen:
                             HoverColor: =RGBA(0, 0, 0, 1)
                             PressedBorderColor: =
                             Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
-                            Text: ="Additional Expenses Required"
+                            Text: ="Additional expenses required"
                             Width: =Parent.Width-60
                             X: =40
                             ZIndex: =5
@@ -1216,7 +1218,7 @@ LeadSummaryScreen As screen:
                             HoverColor: =RGBA(0, 0, 0, 1)
                             PressedBorderColor: =
                             Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
-                            Text: ="Travel Required"
+                            Text: ="Travel required"
                             Width: =Parent.Width-60
                             X: =40
                             ZIndex: =5
@@ -1307,7 +1309,7 @@ LeadSummaryScreen As screen:
                         PaddingBottom: =10
                         PaddingLeft: =2
                         PaddingRight: =2
-                        PaddingTop: =10
+                        PaddingTop: =20
                         RadiusBottomLeft: =8
                         RadiusBottomRight: =8
                         RadiusTopLeft: =8
@@ -1413,6 +1415,7 @@ LeadSummaryScreen As screen:
                                 }
                             )
                         );
+                        If(CountRows(Filter(TotalIncentives,TechnicianID=VarTechnicianID.'Personnel No' && LeadYear=Year(Now())))<=1,
                         Patch(TotalIncentives,
                         Defaults(TotalIncentives),{
                             ID:GUID(),
@@ -1423,7 +1426,7 @@ LeadSummaryScreen As screen:
                             TotalSoldLead:0,
                             Year:Year(Now()),
                             LeadYear:Year(Now())
-                        });
+                        }));
                         Set(VarNotificationloding,false);
                         Set(VarNotificationSuccess,true);
                         /*Notify(
@@ -1626,7 +1629,7 @@ LeadSummaryScreen As screen:
         Image2_1 As image:
             Fill: =RGBA(255, 255, 255, 1)
             Height: =Parent.Height/2
-            Image: =glryImageIS.Selected.Image
+            Image: =glryImageLSS.Selected.Image
             PaddingLeft: =5
             PaddingRight: =5
             Width: =Parent.Width/1.2
