--- a/QuantumTechnicianApp/Src/LeadSummaryScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/LeadSummaryScreen.fx.yaml
@@ -126,7 +126,7 @@ LeadSummaryScreen As screen:
                 PaddingRight: =20
                 PaddingTop: =0
                 Size: =If(Parent.Width<500,16,Parent.Width>500,20,18)
-                Text: ="Submitted Leads"
+                Text: ="Lead Summary"
                 Width: =Parent.Width
                 ZIndex: =1
 
