--- a/QuantumTechnicianApp/Src/SubmittedLeadScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/SubmittedLeadScreen.fx.yaml
@@ -485,8 +485,11 @@ SubmittedLeadScreen As screen:
                     PaddingRight: =0
                     PaddingTop: =0
                     Size: =If(Parent.Width<378,10,Parent.Width<500,11,14)
-                    Text: |
-                        =LookUp(GCTotalIncentives,Year=Text(Year(Now())) &&  TechnicianID=VarTechnicianID.'Personnel No',TotalProposedLead)
+                    Text: |-
+                        =//If(btnheaderCL_1.Text="Quoted Leads",
+                          //  LookUp(GCTotalIncentives,Year=Text(Year(Now())) &&  TechnicianID=VarTechnicianID.'Personnel No',TotalProposedLead,
+                        CountRows(Filter(LeadInformations, Email=User().Email &&
+                        Text(Year('Created On'))=Title2.Text && If(Header="Open",LeadStatus="Submitted" ,LeadStatus=Header)))
                     VerticalAlign: =VerticalAlign.Top
                     Width: =lblTotalLeadsSLS.Width
                     X: =lblTotalLeadsSLS.X
